Added base views

--- a/Views/Carros/ListaCarros.cshtml
+++ b/Views/Carros/ListaCarros.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Maio11_Best.Models.v_carros>
+﻿@model IEnumerable<Maio11_Best.Models.Team>
 
 @{
     ViewBag.Title = "ListaCarros";
