Added trainer link

--- a/Views/Player/PlayerList.cshtml
+++ b/Views/Player/PlayerList.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "PlayerList";
 }
 
-<h2>PlayerList</h2>
+<h2>Players</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
 </p>
-<table class="table table-responsive table-bordered table-striped table-primary">
+<table class="table table-responsive table-bordered table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.player_id)
