--- a/Views/Player/PlayerList.cshtml
+++ b/Views/Player/PlayerList.cshtml
@@ -13,6 +13,7 @@
     <tr class="text-center">
         <th>Id</th>
         <th>Name</th>
+        <th>Photo</th>
         <th>Position</th>
         <th>Birthdate</th>
         <th>Team</th>
@@ -28,6 +29,16 @@
             @Html.DisplayFor(modelItem => item.player_name)
         </td>
         <td>
+            @if (item.photo_path == null || String.IsNullOrEmpty(item.photo_path))
+            {
+                <img width="50" src="@Url.Content("~/fotos/no-player.jpg")" alt="" />
+            }
+            else
+            {
+                <img width="50" src="@Url.Content("~/fotos/" + item.photo_path)" alt="" />
+            }
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.position)
         </td>
         <td>
@@ -37,8 +48,8 @@
             @Html.DisplayFor(modelItem => item.Team.team_name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.player_id }, new { @class="btn btn-primary" })
-            @Html.ActionLink("Delete", "Delete", new { id = item.player_id }, new { @class="btn btn-danger" })
+            @Html.ActionLink("Edit", "Edit", new { id = item.player_id }, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Delete", "Delete", new { id = item.player_id }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
