--- a/Views/Player/PlayerList.cshtml
+++ b/Views/Player/PlayerList.cshtml
@@ -31,11 +31,11 @@
         <td>
             @if (item.photo_path == null || String.IsNullOrEmpty(item.photo_path))
             {
-                <img width="50" src="@Url.Content("~/fotos/no-player.jpg")" alt="" />
+                <img width="50" src="@Url.Content("~/fotos/players/no-player.jpg")" alt="" />
             }
             else
             {
-                <img width="50" src="@Url.Content("~/fotos/" + item.photo_path)" alt="" />
+                <img width="50" src="@Url.Content("~/fotos/players/" + System.IO.Path.GetFileName(item.photo_path))" alt="" />
             }
         </td>
         <td>
