--- a/Views/Team/EditTeam.cshtml
+++ b/Views/Team/EditTeam.cshtml
@@ -1,19 +1,24 @@
 ﻿@model Maio11_Best.Models.Team
 
 @{
-    ViewBag.Title = "InsertTeam";
+    ViewBag.Title = "EditTeam";
 }
 
-@using (Html.BeginForm(Html.BeginForm("InsertTeam", "Team", FormMethod.Post, new { enctype = "multipart/form-data" })))
+<h2>EditTeam</h2>
+
+
+@using (Html.BeginForm("EditTeam", "Team", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Insert Team</h4>
+        <h4>Team</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.team_id)
+
         <div class="form-group">
-            @Html.LabelFor(model => model.team_name,"Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.team_name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.team_name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.team_name, "", new { @class = "text-danger" })
@@ -21,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.foundation_year, "Founded in", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.foundation_year, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.foundation_year, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.foundation_year, "", new { @class = "text-danger" })
@@ -29,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.country, "Country", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.country, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.country, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.country, "", new { @class = "text-danger" })
@@ -37,17 +42,24 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.photo_path, "Photo", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Foto", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="fich" name="fich" class="form-control" onchange="previewFile(this);"/>
+                <input type="file" id="fich" name="fich" class="form-control" onchange="previewFile(this);" />
                 @Html.ValidationMessageFor(model => model.photo_path, "", new { @class = "text-danger" })
-                <img width="180" class="figure-img m-3" id="foto" alt="" />
             </div>
+            @if (!string.IsNullOrEmpty(Model.photo_path))
+            {
+                <img width="180" class="figure-img m-3" id="foto" src="@Url.Content("~/fotos/teams/" + System.IO.Path.GetFileName(Model.photo_path))" alt="Team Photo" />
+            }
+            else
+            {
+                <img width="180" class="figure-img m-3" id="foto" alt="Preview" />
+            }
         </div>
 
-        <div class="form-group mt-2">
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
     </div>
