--- a/Views/Trainer/InsertTrainer.cshtml
+++ b/Views/Trainer/InsertTrainer.cshtml
@@ -1,39 +1,33 @@
-﻿@model Maio11_Best.Models.player
+﻿@model Maio11_Best.Models.trainer
 
 @{
-    ViewBag.Title = "InsertPlayer";
+    ViewBag.Title = "InsertTrainer";
 }
 
-@* Para poder enviar ficheiros *@
-@using (Html.BeginForm("InsertPlayer", "Player", FormMethod.Post, new { enctype = "multipart/form-data" }))
+<h2>InsertTrainer</h2>
+
+
+@using (Html.BeginForm("InsertTrainer", "Trainer", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>New Player</h4>
+        <h4>trainer</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.player_name, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.trainer_name, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.player_name, "Position", new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.player_name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.trainer_name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.trainer_name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.position, "Position", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.coaching_license, "Coaching License", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.position, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.position, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.birthdate, "Birthdate", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.birthdate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @Html.ValidationMessageFor(model => model.birthdate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.coaching_license, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.coaching_license, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -44,7 +38,6 @@
                 @Html.ValidationMessageFor(model => model.team_id, "", new { @class = "text-danger" })
             </div>
         </div>
-
 
         <div class="form-group">
             @Html.LabelFor(model => model.photo_path, "Photo", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -77,7 +70,7 @@
 </script>
 
 <div>
-    @Html.ActionLink("Back to List", "PlayerList")
+    @Html.ActionLink("Back to List", "TrainerList")
 </div>
 
 @section Scripts {
