--- a/Views/Trainer/TrainerList.cshtml
+++ b/Views/Trainer/TrainerList.cshtml
@@ -4,29 +4,34 @@
     ViewBag.Title = "TrainerList";
 }
 
-<h2>Trainers</h2>
+<h2>TrainerList</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Create New", "InsertTrainer", null, new { @class = "btn btn-primary" })
 </p>
 <table class="table table-responsive table-bordered table-striped">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.trainer_name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.coaching_license)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Team.team_name)
-        </th>
+    <tr class="text-center">
+        <th>Trainer</th>
+        <th>Photo</th>
+        <th>Coaching License</th>
+        <th>Team</th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
+    <tr class="text-center">
         <td>
             @Html.DisplayFor(modelItem => item.trainer_name)
+        </td>
+        <td>
+            @if (item.photo_path == null || String.IsNullOrEmpty(item.photo_path))
+            {
+                <img width="50" src="@Url.Content("~/fotos/coachs/no-coach.jpg")" alt="" />
+            }
+            else
+            {
+                <img width="50" src="@Url.Content("~/fotos/coachs/" + System.IO.Path.GetFileName(item.photo_path))" alt="" />
+            }
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.coaching_license)
@@ -35,9 +40,8 @@
             @Html.DisplayFor(modelItem => item.Team.team_name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.trainer_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.trainer_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.trainer_id })
+            @Html.ActionLink("Edit", "EditTrainer", new { id = item.trainer_id }, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Delete", "DeleteTrainer", new { id = item.trainer_id }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
