--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,4 +1,10 @@
 ﻿/* Set padding to keep content from hitting the edges */
+body {
+    background-color: #24252a !important;
+    height: 100vh;
+    color: white
+}
+
 .body-content {
     margin-top: 15px;
     padding-left: 15px;
@@ -23,9 +29,9 @@ textarea {
     margin-right: 5px;
 }
 
-.icon-button::before {
-    margin-right: 5px;
-}
+    .icon-button::before {
+        margin-right: 5px;
+    }
 
 .actions-row {
     width: 250px;
@@ -34,4 +40,81 @@ textarea {
 td {
     text-align: center;
     vertical-align: middle;
+    color: white;
+}
+
+
+.table-striped > tbody > tr:nth-of-type(2n+1) {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.table-striped > tbody > tr:nth-of-type(2n+1) > * {
+    color: white;
+}
+
+.main-container {
+    padding: 150px 0;
+    position: relative;
+}
+
+.sign-up-content {
+    padding: 40px 60px 32px 60px;
+    position: relative;
+    z-index: 99;
+}
+
+.sign-up-content h2 {
+    line-height: 1.5;
+    margin: 0;
+    margin-bottom: 0px;
+    padding: 0;
+    font-weight: bold;
+    color: #222;
+    font-family: Poppins;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.sign-up-container {
+    width: fit-content;
+    color: #525252;
+}
+
+.form-container {
+    width: 520px;
+    background: #fff;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.form-container .row {
+    color: #525252;
+    width: 400px;
+}
+
+.form-container .row > * {
+    padding-left: 0;
+}
+
+.form-container .row input:not(#fich) {
+    padding-left: 1rem;
+}
+
+.form-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.user-photo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.user-photo {
+    max-width: 80px;
+    border-radius: 50%;
 }
