--- a/Views/Team/TeamList.cshtml
+++ b/Views/Team/TeamList.cshtml
@@ -43,7 +43,7 @@
             <td>
                 @if (item.photo_path == null || String.IsNullOrEmpty(item.photo_path))
                 {
-                    <img width="50" src="@Url.Content("~/fotos/teams/no-logo.jpg")" alt="" />
+                    <img width="50" src="@Url.Content("~/fotos/teams/no-logo.png")" alt="" />
                 }
                 else
                 {
