--- a/Views/Team/TeamList.cshtml
+++ b/Views/Team/TeamList.cshtml
@@ -68,5 +68,7 @@
 
 </table>
 
-<div>Page @(Model.PageNumber > Model.PageCount ? 1 : Model.PageNumber) of @Model.PageCount </div>
-@Html.PagedListPager(Model, page => Url.Action("TeamList", "Team", new { page }))
+<div class="d-flex justify-content-sm-between">
+    @Html.PagedListPager(Model, page => Url.Action("TeamList", "Team", new { page }))
+    <span>Page @(Model.PageNumber > Model.PageCount ? 1 : Model.PageNumber) of @Model.PageCount</span>
+</div>
