--- a/Views/Team/TeamList.cshtml
+++ b/Views/Team/TeamList.cshtml
@@ -25,10 +25,7 @@
         <th>Logo</th>
         <th>Founded in</th>
         <th>Country</th>
-        @if (User.Identity.IsAuthenticated)
-        {
-            <th></th>
-        }
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -56,13 +53,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.country)
             </td>
-            @if (User.Identity.IsAuthenticated)
-            {
-                <td class="actions-row">
+            <td class="actions-row">
+                @Html.ActionLink("Details", "DetailsTeam", new { id = item.team_id }, new { @class = "icon-button btn btn-secondary fa fa-eye" })
+                @if (User.Identity.IsAuthenticated)
+                {
                     @Html.ActionLink("Edit", "EditTeam", new { id = item.team_id }, new { @class = "icon-button btn btn-primary fa fa-pencil" })
                     @Html.ActionLink("Delete", "DeleteTeam", new { id = item.team_id }, new { @class = "icon-button btn btn-danger fa fa-trash" })
-                </td>
-            }
+                }
+            </td>
         </tr>
     }
 
