--- a/Views/Trainer/TrainerList.cshtml
+++ b/Views/Trainer/TrainerList.cshtml
@@ -17,19 +17,20 @@
 
 <table class="table table-responsive table-bordered table-striped">
     <tr class="text-center">
+        <th>Trainer Id</th>
         <th>Trainer</th>
         <th>Photo</th>
         <th>Coaching License</th>
         <th>Team</th>
-        @if (User.Identity.IsAuthenticated)
-        {
-            <th></th>
-        }
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.trainer_id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.trainer_name)
             </td>
@@ -49,13 +50,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Team.team_name)
             </td>
-            @if (User.Identity.IsAuthenticated)
-            {
-                <td class="actions-row">
+            <td class="actions-row">
+                @Html.ActionLink("Details", "DetailsTrainer", new { id = item.trainer_id }, new { @class = "icon-button btn btn-secondary fa fa-eye" })
+                @if (User.Identity.IsAuthenticated)
+                {
                     @Html.ActionLink("Edit", "EditTrainer", new { id = item.trainer_id }, new { @class = "icon-button btn btn-primary fa fa-pencil" })
                     @Html.ActionLink("Delete", "DeleteTrainer", new { id = item.trainer_id }, new { @class = "icon-button btn btn-danger fa fa-trash" })
-                </td>
-            }
+                }
+            </td>
         </tr>
     }
 
